--- a/_config.yml
+++ b/_config.yml
@@ -29,5 +29,5 @@ permalink: /episode/:title
 sass:
   sass_dir: css
 timezone: Asia/Tokyo
-title: wwwでつかまえて
+title: WWWでつかまえて
 url: https://www-de-tsukamaete.github.io/
