--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ exclude:
   - README.md
   - vendor
 google_analytics:
-hashtag: examplehashtag
+hashtag: wtsuka
 itunes_podcast_url:
 keywords: comma,separated,keywords
 language: ja
