--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ actors:
   peipeipe:
     image_url: /images/actors/peipeipe.jpg
     name: peipeipe
-    url: https://www.peipeipe.net/
+    url: https://twitter.com/peipeipe
 author: alice
 description: WWWでつかまえます。
 description_long: インターネットが大好きな2人が最近あったことを話します。やらなくちゃいけないことがたくさんある世の中を生き抜いていく。
