--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ actors:
   doi:
     image_url: /images/actors/doi.jpg
     name: 土井
-    url: http://sns.example.com/alice
+    url: https://w-doi.tumblr.com/
   peipeipe:
     image_url: /images/actors/peipeipe.jpg
     name: peipeipe
