--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ actors:
     name: peipeipe
     url: https://twitter.com/peipeipe
 author: alice
-description: WWWでつかまえます。
+description: WWWでつかまえて は、インターネットが大好きな2人が最近あったことを話します。
 description_long: インターネットが大好きな2人が最近あったことを話します。やらなくちゃいけないことがたくさんある世の中を生き抜いていく。
 email: www-de-tsukamaete@googlegroups.com
 exclude:
