--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ actors:
     url: https://w-doi.tumblr.com/
   peipeipe:
     image_url: /images/actors/peipeipe.jpg
-    name: peipeipe
+    name: 松下
     url: https://twitter.com/peipeipe
 author: alice
 description: WWWでつかまえて は、インターネットが大好きな2人が最近あったことを話します。
