--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ actors:
 author: alice
 description: WWWでつかまえて は、インターネットが大好きな2人が最近あったことを話します。
 description_long: インターネットが大好きな2人が最近あったことを話します。やらなくちゃいけないことがたくさんある世の中を生き抜いていく。
-email: www-de-tsukamaete@googlegroups.com
+email: peipeipe@gmail.com
 exclude:
   - docker
   - docker-compose.yml
