--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ actors:
     image_url: /images/actors/peipeipe.jpg
     name: 松下
     url: https://twitter.com/peipeipe
-author: alice
+author: 土井と松下
 description: WWWでつかまえて は、インターネットが大好きな2人が最近あったことを話します。
 description_long: インターネットが大好きな2人が最近あったことを話します。やらなくちゃいけないことがたくさんある世の中を生き抜いていく。
 email: peipeipe@gmail.com
