--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ actors:
     name: 松下
     url: https://twitter.com/peipeipe
 author: 土井と松下
-description: WWWでつかまえて は、インターネットが大好きな2人が最近あったことを話します。
+description: WWWでつかまえて は、インターネットが大好きな2人が最近あったことを話すインターネットラジオです。
 description_long: インターネットが大好きな2人が最近あったことを話します。やらなくちゃいけないことがたくさんある世の中を生き抜いていく。
 email: peipeipe@gmail.com
 exclude:
